thay doi nut hoan tat
thay đổi nút hoàn tất để chuyển page sang bảng giá

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 <div id="thank-you" style="display: none; max-width: 600px; margin: auto; padding: 100px 20px 50px; text-align: center; font-size: 20px; color: green;">
   <h2 style="color: #228B22; font-size: 30px;">🎉 ĐỨC TÂM 🎉</h2>
   <p style="font-size: 25px;">Cảm ơn bạn đã đặt lịch!</p>
-  <p style="font-size: 14px;">Xác nhận lịch của bạn đã đặt thành công.</p>
+  <p style="font-size: 14px;">Hãy nhấn vào nút "Xác Nhận" để hoàn tất đặt lịch.</p>
   <p style="font-size: 18px;">Điện Thoại : 0941767227</p>
   <p style="font-size: 18px;">Đ/c: 143/7 Phan Đăng Lưu, P.2, Q. Phú Nhuận, HCM</p>
   <p style="font-size: 18px;">🕒 Quý Khách vui lòng đến đúng giờ. Nếu có sự thay đổi xin quý khách liên hệ đến cơ sở để được hỗ trợ. Xin cám ơn Quý Khách</p>
 <!-- Nút quay về website -->
-<a href="https://sites.google.com/view/ductamtrilieu?utm_source=thankspage&utm_medium=redirect&utm_campaign=trang-chu" target="_blank" rel="noopener noreferrer"
+<a href="https://sites.google.com/view/ductamtrilieu/b%E1%BA%A3ng-gi%C3%A1?utm_source=event&utm_medium=redirect&utm_campaign=bang-gia" target="_blank" rel="noopener noreferrer"
    style="display: inline-block; margin-top: 30px; padding: 12px 24px; background-color: #228B22; color: white; font-size: 16px; text-decoration: none; border-radius: 8px;">
   Nhấn vào đây để xác nhận
 </a>
@@ -207,6 +207,7 @@ fetch("/api/submit", {
     });
   }
 </script>
+
 
 
 
