--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
   <label><b>7. Bạn muốn phục vụ liệu trình nào?</b></label><br>
   <div style="font-size: 17px; line-height: 1.6;">
     <input type="checkbox" name="service" value="1 - Giảm đau đầu, viêm xoang, mất ngủ"> 1 - Giảm đau đầu, viêm xoang, mất ngủ<br>
-    <input type="checkbox" name="service" value="2 - Cổ vai gáy"> 2 - Cổ vai gáy<br>
-    <input type="checkbox" name="service" value="3 - Vùng đau"> 3 - Vùng đau<br>
-    <input type="checkbox" name="service" value="4 - Khai thông kinh lạc toàn thân"> 4 - Khai thông kinh lạc toàn thân<br>
-    <input type="checkbox" name="service" value="5 - Giải cơ thể thao"> 5 - Giải cơ thể thao<br>
-    <input type="checkbox" name="service" value="6 - Tổng hợp"> 6 - Tổng hợp<br>
-    <input type="checkbox" name="service" value="7 - Đánh gió giác hơi"> 7 - Đánh gió giác hơi (dịch vụ thêm)<br><br>
+    <input type="checkbox" name="service" value="2 - Làm ấm cơ thể, đánh gió giác hơi"> 2 - Làm ấm cơ thể, đánh gió giác hơi<br>
+    <input type="checkbox" name="service" value="3 - Cổ vai gáy"> 3 - Cổ vai gáy<br>
+    <input type="checkbox" name="service" value="4 - Chuyên sâu vùng đau"> 4 - Chuyên sâu vùng đau<br>
+    <input type="checkbox" name="service" value="5 - Phục hồi sức khỏe"> 4 - Phục hồi sức khỏe<br>
+    <input type="checkbox" name="service" value="6 - Khai thông kinh lạc toàn thân"> 6 - Khai thông kinh lạc toàn thân<br>
+    <input type="checkbox" name="service" value="7 - Giải cơ thể thao"> 7 - Giải cơ thể thao<br>
+    <input type="checkbox" name="service" value="8 - Đánh gió giác hơi"> 8 - Đánh gió giác hơi (dịch vụ thêm)<br><br>
   </div>
 
   <label for="note"><b>8. Ghi chú về bệnh của quý khách (nếu có):</b></label><br>
@@ -207,6 +208,7 @@ fetch("/api/submit", {
     });
   }
 </script>
+
 
 
 
